tests/fixtures/invalid/pow_none_str_str.py
# Cannot call pow() with None, Str, Str
x = pow(None, "hello", "hello")
